--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,9 @@
 <footer class="footer text-muted bg-light">
   <div class="container">
-    <span>© <%= Date.today.year %> Your Company</span>
+    <span>© Feito por: Gabriel Schiavo - <%= Date.today.year %></span>
     <ul class="list-inline mb-0 float-right">
-      <li class="list-inline-item mr-3"><%= link_to "Terms", terms_path %></li>
-      <li class="list-inline-item mr-3"><%= link_to "Privacy", privacy_path %></li>
+      <li class="list-inline-item mr-3"><a href="https://linkedin.com/in/gabbro" target="_blank">Linkedin</a></li>
+      <li class="list-inline-item mr-3"><a href="https://github.com/gbs0" target="_blank">Github</a></li>
     </ul>
   </div>
 </footer>
