--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,8 +18,14 @@
       </ul>
 
       <ul class="navbar-nav">
-        <li class="nav-item"><%= link_to "What's New", announcements_path, class: "nav-link #{unread_announcements(current_user)}" %></li>
+        <!-- <li class="nav-item"><%#= link_to "What's New", announcements_path, class: "nav-link #{unread_announcements(current_user)}" %></li> -->
         <% if user_signed_in? %>
+
+        <li class="nav-item"><%= link_to "Create a Quiz", new_quiz_path, class: "nav-link mr-4" %></li>
+
+        <li class="nav-item"><%= link_to "See your Quizzes", quizzes_path, class: "nav-link mr-4" %></li>
+        
+        <li class="nav-item"><%= link_to "See all Answears", answears_path, class: "nav-link mr-4" %></li>
 
         <li class="nav-item">
           <%= link_to notifications_path, class: "nav-link" do %>
