--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,6 +41,7 @@
               <% if current_user.admin? && respond_to?(:madmin_root_path) %>
                 <%= link_to "Admin Area", madmin_root_path, class: "dropdown-item" %>
               <% end %>
+              <%= link_to "My Questions", questions_path, class: "dropdown-item" %>
               <%= link_to "My Answears", answears_path, class: "dropdown-item" %>
               <%= link_to "Settings", edit_user_registration_path, class: "dropdown-item" %>
               <div class="dropdown-divider"></div>
