--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,45 +1,53 @@
-
-
-
 <div class="row">
-  <div class="col-sm-6">
-    <h1>Questions</h1>
+  <div class="col-sm-6 mb-3">
+    <h1 class="mt-2">My Questions</h1>
   </div>
-
-  <div class="col-sm-6 text-right">
-  <%= link_to new_question_path, class: 'btn btn-primary' do %>
-    Add New Question
-  <% end %>
+  
+  <div class="col-sm-6 text-right mb-2">
+    <%= link_to new_question_path, class: 'btn btn-primary mb-3' do %>
+      Add New Question
+    <% end %>
+    <div class="text-muted text-right">
+      <span>Total questions count: <%= QuestionsHelper::count(@questions) %></span>
+    </div>
   </div>
 </div>
 
-<div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
-    <thead>
-      <tr>
-    
-
+<% if @questions.present? %>
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered table-hover">
+      <thead>
+        <tr>
             <th>Title</th>
             <th>Quiz</th>
+            <th></th>
+            <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @questions.each do |question| %>
+          <%= content_tag :tr, id: dom_id(question), class: dom_class(question) do %>
             
-          <th></th>
-        
-      </tr>
-    </thead>
 
-    <tbody>
-      <% @questions.each do |question| %>
-        <%= content_tag :tr, id: dom_id(question), class: dom_class(question) do %>
-          
-
-                      <td><%= question.title %></td>
-                      <td><%= question.quiz %></td>
-          
-          
-            <td><%= link_to 'Show', question %></td>
-          
+                        <td><%= question.title %></td>
+                        <td><%= question.quiz %></td>
+            
+            
+              <td><%= link_to 'See Answears', question_path(question.id) %></td>
+              <td>
+                <%= link_to question_path(question), method: :delete, data: {confirm:"Destroy this question?"}, class: "ml-3 card-link" do %>
+                    <i class="fas fa-trash"></i><small class="ml-2">Delete</small>
+                <% end %>
+              </td>
+            
+          <% end %>
         <% end %>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+      </tbody>
+    </table>
+  </div>
+  <% else %>
+  <div class="text-center">
+    <h2>You didn't post any questions yet ): </h2>
+  </div>
+<% end %>
