--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -17,14 +17,11 @@
   <table class="table table-striped table-bordered table-hover">
     <thead>
       <tr>
-    
-
-            <th>Title</th>
-            <th>Topic</th>
-            <th>Created At</th>
-            
+          <th>Title:</th>
+          <th>Topic:</th>
+          <th>Created:</th>
           <th></th>
-        
+          <th></th>
       </tr>
     </thead>
 
@@ -35,10 +32,11 @@
 
                       <td><%= quiz.title %></td>
                       <td><%= quiz.topic %></td>
-                      <td><%= quiz.created_at %></td>
+                      <td><%= Timezone.date_threshold(quiz.created_at) %> ago</td>
           
           
-            <td><%= link_to 'Show', quiz %></td>
+            <td><%= link_to 'Questions', quiz %></td>
+            <td><%= link_to 'Edit', edit_quiz_path(quiz) %></td>
           
         <% end %>
       <% end %>
