View display instance hotfix

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -31,7 +31,7 @@
             
 
                         <td><%= question.title %></td>
-                        <td><%= question.quiz %></td>
+                        <td><%= question.quiz.title %></td>
             
             
               <td><%= link_to 'See Answears', question_path(question.id) %></td>
