--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -13,6 +13,6 @@
   <dd><%= @question.title %></dd>
 
   <dt>Quiz:</dt>
-  <dd><%= @question.quiz %></dd>
+  <dd><%= @question.quiz.title %></dd>
 
 </dl>
