--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,11 +1,18 @@
 <div class="page-header">
-  <%= link_to questions_path, class: 'btn btn-default' do %>
-    All Questions
-  <% end %>
-  <%= link_to edit_question_path(@question), class: 'btn btn-primary' do %>
-    Edit
-  <% end %>
-  <h1>Show question</h1>
+  <div class="d-flex flex-row justify-content-between aling-center mb-3">
+    <h3 class="mt-4">Show Question</h3>
+    <div>
+      <%= link_to root_path, class: 'btn btn-warning col-sm-6 col-lg-6  mb-2' do %>
+        Back to all Questions
+      <% end %>
+      <%= link_to edit_question_path(@question), class: 'btn btn-primary col-sm-6 col-lg-2 mb-2' do %>
+        Edit
+      <% end %>
+      <%= link_to new_question_answear_path(@question), class: 'btn btn-success col-sm-6 col-lg-8' do %>
+        Answear this question
+      <% end %>
+    </div>
+  </div>
 </div>
 
 <dl class="dl-horizontal">
