--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,7 +26,7 @@
       </div>
     <% end %>
 
-    <div class="text-center">
+    <div class="text-center mt-2 mb-3">
       <%= render "devise/shared/links" %>
     </div>
   </div>
