--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,28 +1,30 @@
-<div class="page-header">
+<div class="page-header container">
   <div class="d-flex flex-row justify-content-between aling-center mb-3">
-    <h3 class="mt-4">Show Question</h3>
+    <h4 class="mt-4">Question in <em><%= QuizzesHelper::quiz_topic(@question.quiz_id) %></em> topic:</h4>
     <div>
-      <%= link_to root_path, class: 'btn btn-warning col-sm-6 col-lg-6 mb-2' do %>
-        Back to all Questions
-      <% end %>
-      <% if  current_user.id.equal?(@question.user_id) %>
-        <%= link_to edit_question_path(@question), class: 'btn btn-primary col-sm-6 col-lg-2 mb-2' do %>
-          Edit
+      <div style="right:0;">
+        <%= link_to root_path, class: 'btn btn-warning col-sm-6 col-lg-6 mb-2' do %>
+          Back to all Questions
         <% end %>
-      <% end %>
-      <% unless current_user.id.equal?(@question.user_id) %>
-        <%= link_to new_question_answear_path(@question), class: 'btn btn-success col-sm-6 col-lg-8' do %>
-          Answear this question
+        <% if  current_user.id.equal?(@question.user_id) %>
+          <%= link_to edit_question_path(@question), class: 'btn btn-primary col-sm-6 col-lg-2 mb-2' do %>
+            Edit
+          <% end %>
         <% end %>
-      <% end %>
-      <%= link_to new_question_path(@question), class: 'btn btn-success col-sm-6 col-lg-8' do %>
-        Create new Question
-      <% end %>
+        <% unless current_user.id.equal?(@question.user_id) %>
+          <%= link_to new_question_answear_path(@question), class: 'btn btn-success col-sm-6 col-lg-8' do %>
+            Answear this question
+          <% end %>
+        <% end %>
+        <%= link_to new_question_path(@question), class: 'btn btn-success col-sm-6 col-lg-8' do %>
+          Create new Question
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
 
-<dl class="dl-horizontal mt-3 bordered">
+<dl class="dl-horizontal m-4 bordered col-md-10">
   <div class="bd-callout-question bd-callout-bubble">
     <div class="d-flex flex-column justify-content-between" style="min-height: 10rem;">
       <div class="post-title">
@@ -31,7 +33,6 @@
       </div>
       <div class="text-right">
           <small>Posted <%= QuestionsHelper::timestamp(@question.id) %> ago</small>
-          <small>Topic <%= QuestionsHelper::timestamp(@question.id) %> ago</small>
       </div>
     </div>
   </div>
