--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -16,8 +16,10 @@
             Answear this question
           <% end %>
         <% end %>
-        <%= link_to new_question_path(@question), class: 'btn btn-success col-sm-6 col-lg-8' do %>
-          Create new Question
+        <% if  current_user.id.equal?(@question.user_id) %>
+          <%= link_to new_question_path(@question), class: 'btn btn-success col-sm-6 col-lg-8' do %>
+            Create new Question
+          <% end %>
         <% end %>
       </div>
     </div>
@@ -37,10 +39,11 @@
     </div>
   </div>
 
-  <dt>Title:</dt>
-  <dd><%= @question.title %></dd>
+  <% if @answears.empty? %>
 
-  <dt>Quiz:</dt>
-  <dd><%= @question.quiz.title %></dd>
-
+  <% else %>
+    <div class="container text-center mt-5">
+      <h4>Nobody answear this question yet 🤓</h4>
+    </div>
+  <% end %>
 </dl>
