Front end and Controllers updates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "jumpstart/sticky-footer";
 @import "jumpstart/announcements";
 @import "questions";
+@import "answears";
 
 // Fixes bootstrap nav-brand container overlap
 @include media-breakpoint-down(xs) {
