--- a/app/views/answears/_new.html.erb
+++ b/app/views/answears/_new.html.erb
@@ -29,12 +29,17 @@
   </div>
 
   <div class="form-group">
+    <%= form.text_area :lat, class: 'form-control', id: "lat", style: "display: none;" %>
+    <%= form.text_area :lng, class: 'form-control', id: "lng", style: "display: none;" %>
+  </div>
+
+  <div class="form-group">
     <% if answear.persisted? %>
       <div class="float-right">
         <%= link_to 'Destroy', answear, method: :delete, class: "text-danger", data: { confirm: 'Are you sure?' } %>
       </div>
     <% end %>
-
+    
     <%= form.submit "Send", class: 'btn btn-primary' %>
 
     <% if answear.persisted? %>
