--- a/app/assets/stylesheets/answears.scss
+++ b/app/assets/stylesheets/answears.scss
@@ -1,3 +1,14 @@
-// Place all the styles related to the Answears controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.bd-answear {
+    padding: 1.25rem;
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+    border: 1px solid #eee;
+    border-right-width: .25rem;
+    border-radius: .25rem;
+    min-height: 3rem;
+}
+
+.bd-answear-warning {
+    border-right-color: #f0ad4e;
+}
+
