Front and Controller updates

--- a/app/views/answears/index.html.erb
+++ b/app/views/answears/index.html.erb
@@ -4,6 +4,9 @@
   </div>
 
   <div class="col-sm-6 text-right">
+  <div class="text-muted text-right">
+    <span>Total questions Answeared: <%= QuestionsHelper::count(@answears) %></span>
+  </div>
   <%#= link_to new_answear_path, class: 'btn btn-primary' do %>
     <!-- Add New Answear -->
   <%# end %>
