--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -51,7 +51,7 @@
           <%= answear.description %>
         </div>
         <div class="text-right">
-            <small>Answered <%= AnswearsHelper::timestamp(answear.id) %> ago by <%= AnswearsHelper::author(answear.user) %></small>
+            <em><small>Answered <%= AnswearsHelper::timestamp(answear.id) %> ago by <%= AnswearsHelper::author(answear.user_id) %></small></em>
         </div>
       </div>
     </div>
