add new route and action

--- a/app/views/answears/answeared_index.html.erb
+++ b/app/views/answears/answeared_index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-6">
-    <h1>My Answears</h1>
+    <h1>Answears</h1>
   </div>
 
   <div class="col-sm-6 text-right">
@@ -16,7 +16,7 @@
 <div class="table-responsive">
   <% if @answears.empty? %>  
     <div class="container text-center mt-5">
-      <h4>You've not answeared anyone yet 🤓</h4>
+      <h4>Anyone answeared you yet 🤓</h4>
     </div>
   <% else %>
   <table class="table table-striped table-bordered table-hover">
