--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
 
         <li class="nav-item"><%#= link_to "My Quizzes", quizzes_path, class: "nav-link mr-4" %></li>
         
-        <li class="nav-item"><%= link_to "See all Answears", answears_path, class: "nav-link mr-4" %></li>
+        <li class="nav-item"><%= link_to "See all Answears", questions_answeared_path, class: "nav-link mr-4" %></li>
 
         <li class="nav-item">
           <%= link_to root_path, class: "nav-link " do %>
